<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/iiitd4"

    app:layout_constraintBottom_toTopOf="@+id/heading"
    app:layout_constraintHorizontal_bias="0.5"
    tools:context="com.example.himanshuaggarwal.learningapp.MainActivity_A1_MT17015">

    <TextView
        android:id="@+id/heading"
        android:layout_width="0dp"
        android:layout_height="109dp"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/yrsa_light"
        android:gravity="bottom"
        android:shadowColor="@android:color/background_dark"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="@string/IIITD"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Large.Inverse"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:targetApi="jelly_bean" />

    <Button
        android:id="@+id/proceed_button"
        style="@android:style/Widget.Holo.Button.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="serif-monospace"
        android:onClick="proceed"
        android:shadowColor="@android:color/background_dark"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="@string/Proceed"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" tools:targetApi="jelly_bean" />

    <Button
        android:id="@+id/hindi_button"
        style="@android:style/Widget.Holo.Button.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif-monospace"
        android:shadowColor="@android:color/background_dark"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="@string/hindi"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/proceed_button"
        app:layout_constraintEnd_toStartOf="@+id/english_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading"
        app:layout_constraintVertical_bias="0.818"
        tools:targetApi="jelly_bean" />

    <Button
        android:id="@+id/english_button"
        style="@android:style/Widget.Holo.Button.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif-monospace"
        android:shadowColor="@android:color/background_dark"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="@string/english"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/proceed_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hindi_button"
        app:layout_constraintTop_toBottomOf="@+id/heading"
        app:layout_constraintVertical_bias="0.818"
        tools:targetApi="jelly_bean" />
</android.support.constraint.ConstraintLayout>
